# dream-forge

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
agents/story_crew/: crew.py  main.py  prompts.py  requirements.txt  schemas.py
apps/api/: main.py
apps/api/dreamforge_api/: config.py  db.py  mock_crew.py  models.py  schemas.py  security.py
apps/api/dreamforge_api/api/: app.py
apps/api/dreamforge_api/clients/: inference.py  spaces.py  story_crew.py
apps/api/dreamforge_api/services/: media_jobs.py  story_sessions.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/stories/[shareSlug]/: page.tsx
apps/web/components/: story-reader.tsx  story-studio.tsx
apps/web/lib/: api.ts  types.ts
apps/worker/: main.py
docs/reference/: architecture.md  digitalocean-setup.md
tests/: conftest.py  test_story_api.py  test_story_crew_contract.py  test_worker.py
