[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamforge"
version = "0.2.0"
description = "DreamForge clean restart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "boto3>=1.37.0,<2.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "gradient-adk>=0.2.11",
  "gradient>=3.11.0",
  "langgraph>=1.1.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=7.0.0,<8.0.0"
]

[tool.setuptools.package-dir]
"" = "apps/api"

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["dreamforge_api*"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]
testpaths = ["tests"]
